# ufo-r-sandbox

./: DESCRIPTION  NAMESPACE  README.md  test.csv
R/: csv.R  empty.R  extendr-wrappers.R  mmap.R  populate.R  seq.R  singleton.R  sql.R  ufos.R
man/: dot-onLoad.Rd  dot-onUnload.Rd  dot-ufo_core.Rd  execute.Rd  jeff_goldbloom.Rd  listen.Rd  ufo_character.Rd  ufo_character_constructor.Rd  ufo_complex.Rd  ufo_complex_constructor.Rd  ufo_integer.Rd  ufo_integer_constructor.Rd  ufo_logical.Rd  ufo_logical_constructor.Rd  ufo_numeric.Rd  ufo_numeric_constructor.Rd  ufo_raw.Rd  ufo_raw_constructor.Rd  ufo_system_get_or_create.Rd  ufo_system_shutdown.Rd  ufo_vector.Rd  ufo_vector_constructor.Rd
src/: Makevars  Makevars.win  entrypoint.c  example
src/rust/: Cargo.toml
src/rust/src/: allocr.rs  errors.rs  helpers.rs  lib.rs  rserialization.rs  sandbox.rs  serder.rs  server.rs  typer.rs  ufotype.rs
tests/: testthat.R
tests/testthat/: test-hello.R
