[package]
name = 'ufosandbox'
version = '0.1.0'
edition = '2018'

[lib]
crate-type = [ 'staticlib' ]

[dependencies]
itertools = "0.10"
libc = "0.2"
# lazy = "0.5.1"
libR-sys = "*"

extendr-api = { git = "https://github.com/extendr/extendr", branch = "master" }

ufo_core = { git = "https://github.com/ufo-org/ufo-core", branch = "main" }
ufo_ipc = { git = "https://github.com/ufo-org/ufo_ipc", branch = "main" }
#ufo = { git = "https://github.com/ufo-org/ufo-rust", branch = "main" } # { git = "https://github.com/ufo-org/ufo-rust", branch = "main" }
# ufo = { path = "../../../ufo-rust", default = false }

