[package]
name = 'ufosandbox'
version = '0.1.0'
edition = '2018'

[lib]
crate-type = [ 'staticlib' ]

[dependencies]
itertools = "0.10"
libc = "0.2"
libR-sys = "*"
byteorder = "1.4"

extendr-api = { git = "https://github.com/extendr/extendr", branch = "master" }

ufo_core = { git = "https://github.com/ufo-org/ufo-core", branch = "main", features = ["parallel_hashing"] }
ufo_ipc = { git = "https://github.com/ufo-org/ufo_ipc", branch = "main" }

